Layout inicial do laudo; ajustes urls #12

--- a/apps/templates/ficha_imovel/laudo.html
+++ b/apps/templates/ficha_imovel/laudo.html
@@ -21,7 +21,7 @@
             <div class="row justify-content-between">
                 <div class="col-auto  col-sm-2 mb-0">
                     <label>CÓDIGO UN.</label>
-                    <label class="form-control">{{ request.user.first_name }}</label>  
+                    <label class="form-control">----------</label>  
                 </div> 
                 <div class="col-auto  col-sm-10 mb-3">
                     <h2 class="h2 mb-5 row justify-content-center">Ficha de Imóveis</h2>
@@ -45,62 +45,62 @@
             <div class="row mb-3">
                 <div class="col-sm-6 mb-3">
                     <div id="linha">
-                        conteudo da div
+                        -------
                     </div>
                 </div>
             </div>  
             
             <div class="card col-sm-12  card-body border-1 shadow mb-4">
                 <div class="row">            
-                    <div class="col-sm-1 mb-1">                   
+                    <div class="col-sm-2">                   
                             <label class="py-2">Tipo:</label>
                     </div>
-                    <div class="col-sm-5 mb-1">
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                    <div class="col-sm-4">
+                        <label class="form-control">----------</label>
                     </div>
-                    <div class="col-sm-1 mb-1 offset-sm-2">
+                    <div class="col-sm-2 -1 offset-sm-1">
                             <label class="py-2">Bairro:</label>
                     </div>
-                    <div class="col-sm-3 mb-1">
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                    <div class="col-sm-3">
+                        <label class="form-control">----------</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                             <label class="py-2">Endereço:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">
+                    <div class="col-sm-10">
                         <div>                             
-                            <label class="form-control">{{ request.user.first_name }}</label>
+                            <label class="form-control">----------</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                             <label class="py-2">Localização:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">
+                    <div class="col-sm-10">
                         <div>                             
-                            <label class="form-control">{{ request.user.first_name }}</label>
+                            <label class="form-control">----------</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                             <label class="py-2">Condomínio:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">
+                    <div class="col-sm-10">
                         <div>                             
-                            <label class="form-control">{{ request.user.first_name }}</label>
+                            <label class="form-control">----------</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                         <label class="py-2">Edifício:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">                                                   
-                        <label class="form-control">Edifício Torre Alta</label>                        
+                    <div class="col-sm-10 mb-1">                                                   
+                        <label class="form-control">----------</label>                        
                     </div>
                 </div>
             </div>
@@ -115,15 +115,15 @@
                             <div class="col-auto col-sm-4">
                                 <label class="form-control">Frente</label>
                             </div>
-                            <div class="col-auto offset-sm-1 col-sm-1 mb-1">
+                            <div class="col-auto offset-sm-1 col-sm-1">
                                 <label class="py-2">SOL:</label>                            
                             </div>
-                            <div class="col-auto col-sm-auto mb-1">
+                            <div class="col-auto col-sm-auto">
                                 <label class="form-control">Manhã</label>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-auto col-sm-2 mb-1">                   
+                            <div class="col-auto col-sm-2">                   
                                 <label class="py-2">Imóvel:</label>
                             </div>
                             <div class="col-sm-4">
@@ -133,24 +133,24 @@
                     </div>            
                     <div class="col-sm-6">
                         <div class="row">
-                            <div class="col-auto col-sm-2 mb-1">                   
+                            <div class="col-auto col-sm-2">                   
                                 <label class="py-2">Placa:</label>
                             </div>
-                            <div class="col-auto col-sm-4 mb-1">
+                            <div class="col-auto col-sm-4">
                                 <label class="form-control">-------</label>
                             </div>
-                            <div class="col-auto col-sm-1 offset-sm-1 mb-1">                   
+                            <div class="col-auto col-sm-2">                   
                                 <label class="py-2">Chave:</label>
                             </div>
-                            <div class="col-auto col-sm-4 mb-1">
+                            <div class="col-auto col-sm-4">
                                 <label class="form-control">---------</label>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-2 mb-1">
+                            <div class="col-sm-2">
                                     <label class="py-2">Agendar:</label>
                             </div>
-                            <div class="col-sm-10 mb-1">
+                            <div class="col-sm-10">
                                 <label class="form-control">Com corretor dia xx/xxxx</label>
                             </div>
                         </div>
@@ -159,67 +159,67 @@
             </div>
             <div class="card card-body border-1 shadow mb-4">
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                             <label class="py-2">Proprietário:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">
+                    <div class="col-sm-10">
                         <div>                             
-                            <label class="form-control">{{ request.user.first_name }}</label>
+                            <label class="form-control">----------</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-5">
                         <div class="row">
-                            <div class="col-sm-2 offset-sm-1">Celular:</div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-4 offset-sm-1">Celular:</div>
+                            <div class="col-sm-6">
+                                <label class="form-control">(21) 98195-3211</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <div class="col-sm-5">Resid.:</div>
+                            <div class="col-sm-7">
                                 <label class="form-control">----------</label>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="row">
-                            <div class="col-sm-3">Residêncial:</div>
-                            <div class="col-sm-9">
-                                <label class="form-control">----------</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="row">
-                            <div class="col-sm-3">Comercial:</div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-5">Comer.:</div>
+                            <div class="col-sm-7">
                                 <label class="form-control">----------</label>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1">
+                    <div class="col-sm-2">
                         <label class="py-2 px-5">E-mail:</label>    
                     </div>
-                    <div class="col-sm-11 mb-1">
+                    <div class="col-sm-10">
                         <div>                             
-                            <label class="form-control">{{ request.user.first_name }}</label>
+                            <label class="form-control">----------</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 mb-1 px-4">Cônjuge:</div>
-                    <div class="col-sm-7 mb-1">
+                    <div class="col-sm-2">Cônjuge:</div>
+                    <div class="col-sm-6">
                         <label class="form-control">----------</label>
                     </div>
-                    <div class="col-sm-1 px-4 mb-1">Celular:</div>
-                    <div class="col-sm-3 mb-1">
+                    <div class="col-sm-2 px-4">Celular:</div>
+                    <div class="col-sm-2">
                         <label class="form-control">----------</label>
                     </div>
                     <div class="row">
-                        <div class="col-sm-1 mb-1">
+                        <div class="col-sm-2">
                             <label class="py-2 px-5">E-mail:</label>    
                         </div>
-                        <div class="col-sm-10 mb-1">
+                        <div class="col-sm-10">
                             <div>                             
-                                <label class="form-control">{{ request.user.first_name }}</label>
+                                <label class="form-control">----------</label>
                             </div>
                         </div>
                     </div>
@@ -428,7 +428,7 @@
                             <div class="col-auto col-sm-4 mb-1">
                                 <label class="form-control">-------</label>
                             </div>
-                            <div class="col-auto col-sm-1 offset-sm-1 mb-1">                   
+                            <div class="col-auto col-sm-2">                   
                                 <label class="py-2">Chave:</label>
                             </div>
                             <div class="col-auto col-sm-4 mb-1">
@@ -448,61 +448,87 @@
                 </div>
                 <div class="card col-sm-12  card-body border-1 shadow mb-4">
                     <div class="row">            
-                        <div class="col-sm-1 mb-1">                   
+                        <div class="col-sm-2">                   
                                 <label class="py-2">Opcionista(s):</label>
                         </div>
-                        <div class="col-sm-5 mb-1">
+                        <div class="col-sm-4">
                             <label class="form-control">---------</label>
                         </div>
-                        <div class="col-sm-1 mb-1 offset-sm-2">
+                        <div class="col-sm-2 offset-sm-1">
                                 <label class="py-2">Comissão:</label>
                         </div>
-                        <div class="col-sm-3 mb-1">
+                        <div class="col-sm-3">
                             <label class="form-control">---------------</label>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-3 mb-1">
+                        <div class="col-sm-4">
                                 <label class="py-2">Captação: Ficha ( --- ) /outro:</label>    
                         </div>
-                        <div class="col-sm-9 mb-1">
+                        <div class="col-sm-8">
                             <div>                             
                                 <label class="form-control">------------</label>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-3 mb-1">
+                        <div class="col-sm-4">
                                 <label class="py-2">Habite-se: ( )S ( )N</label>    
                         </div>
-                        <div class="col-sm-9 mb-1">
+                        <div class="col-sm-8">
                             <div>                             
                                 <label class="form-control">----------</label>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-3 mb-1">
+                        <div class="col-sm-4">
                                 <label class="py-2">Documentação na empresa: ( )S ( )N qual?</label>    
                         </div>
-                        <div class="col-sm-9 mb-1">
+                        <div class="col-sm-8">
                             <div>                             
                                 <label class="form-control">-------------</label>
                             </div>
                         </div>
                     </div>
-
  
                 </div>
 
 
                 <div class="card card-body border-1 shadow mb-4">
-                <div class="row">
-                    <div class="col-sm-6 mb-1">
-               
-            </div>
-            </div>
-                </div> 
+                    <div class="row"><label class="h4">Descrição:</label></div>
+                    <div class="row"></div>
+
+                    <div class="col-sm-12">
+                        <div id="linha">
+                            -------
+                        </div>   
+                        <br>                 
+                </div>
+
+                <div class="row"></div>
+                <div class="row"><label class="h6">Atualizações:</label></div>
+                <div class="card card-body border-1 shadow mb-4">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th class="border-gray-200">Data</th>
+                                <th class="border-gray-200">Corretor</th>						
+                                <th class="border-gray-200">Observção</th>
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Item -->
+                            <tr>
+                                <td> <p class="text-info">21/04/2022</p></td>
+                                <td>-------</td>
+                                <td>>-------</td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                 
 
 
 
